libs/wingc/src/lsp/snapshots/signature/class_super.snap
---
source: libs/wingc/src/lsp/signature.rs
---
signatures:
  - label: "(hello: num): Base"
    documentation:
      kind: markdown
      value: "### Parameters\n- `hello` — `num`"
    parameters:
      - label: "hello: num"
    activeParameter: 0

