libs/wingc/src/lsp/snapshots/signature/empty_super.snap
---
source: libs/wingc/src/lsp/signature.rs
---
signatures:
  - label: "(): A"
    documentation:
      kind: markdown
      value: ""
    parameters: []
    activeParameter: 0

