libs/wingc/src/lsp/snapshots/signature/inflight_class_super.snap
---
source: libs/wingc/src/lsp/signature.rs
---
signatures:
  - label: "(sound: str): A"
    documentation:
      kind: markdown
      value: "### Parameters\n- `sound` — `str`"
    parameters:
      - label: "sound: str"
    activeParameter: 0

