libs/wingc/src/lsp/snapshots/signature/single_arg_builtin.snap
---
source: libs/wingc/src/lsp/signature.rs
---
signatures:
  - label: "(0: str?): str"
    parameters:
      - label: "0: str?"
    activeParameter: 0

